syntax="proto3";
import "Documents/Document.proto";

package Diadoc.Proto.Documents;

message DocumentList {
	 int32 TotalCount = 1;
	repeated Document Documents = 2;
}
